# search-wasm

./: .gitignore  .gitignore_vite  CLEANUP_SUMMARY.md  COMMIT_MESSAGE.md  Cargo.toml  DEPLOY_GUIDE.md  FINAL_STRUCTURE.md  FINAL_STRUCTURE_V2.md  LICENSE_MIT  Makefile  README.md  README_VITE.md  VITE_MIGRATION_SUMMARY.md  build.sh  package.json  wrangler.toml
.github/workflows/: deploy.yml
frontend/: CHANGELOG.md  README.md  _headers  index.html  main.js  package-lock.json  package.json  style.css  tailwind.config.js  vite.config.js  worker.js
frontend/scripts/: switch-to-vite.sh
pkg/: package.json  ripgrep_lite_wasm.d.ts  ripgrep_lite_wasm.js
src/: lib.rs
www/: index.html  index.js  pkg  văn bản.txt  worker.js
www/pkg/: ripgrep_lite_wasm_bg.wasm.d.ts
