[package]
name = "ripgrep-lite-wasm"
version = "0.1.0"
authors = ["henrynguyen6677 <henrynguyen6677@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
regex = { version = "1.10.5", features = ["std"] }
# Thư viện để chuyển đổi (serialize) các struct của Rust thành các định dạng khác
serde = { version = "1.0", features = ["derive"] }

# Cầu nối giữa Serde và wasm-bindgen để chuyển đổi trực tiếp thành đối tượng JavaScript
serde-wasm-bindgen = "0.6"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
